@@ -1,3 +1,5 @@
++2012-03-19 10:52:49 +0700 Sửa lại các thông tin thay đổi trong mỗi tập tin | Nguyễn Đình Quân >> 8aa9132
++2012-03-19 10:48:59 +0700 Make changelog | Nguyễn Đình Quân >> 915bedb
 +2012-03-19 10:44:34 +0700 replace default archive.lang.php file | Nguyễn Đình Quân >> 7f7f4a6
 +2012-03-19 10:30:54 +0700 archive.lang.php translated, update some comments | Nguyễn Đình Quân >> 2c99f30
 +2012-03-19 00:07:38 +0700 Update translated time | Nguyễn Đình Quân >> 20f7fe9
